--- a/css/styles.css
+++ b/css/styles.css
@@ -1,130 +1,99 @@
-@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500&display=swap');
-
-/* Reset some default styles */
-body, h1, h2, h3, p, ul, li {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;400;500;700&display=swap');
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-/* Add some styles for body*/
+/* Variables */
+
+:root {
+    --color-purple: #883AE1;
+    --color-purple-light: #E6D6FC;
+    --color-white: #FFFFFF;
+    --color-grey: #6C727F;
+    --color-grey-light: #E5EAF0;
+    --color-grey-extralight: #FAFAF9;
+    --color-black: #20293A;
+
+    --box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
+    --radius: 15px;
+
+    --font-title: 1.125rem;
+    --font-body: 0.875rem;
+    --font-small-text: 0.75rem;
+    --font-tag: 0.625rem;
+}
+
+/* Base styles */
+
 body {
+    background-color: var(--color-grey-extralight);
     min-height: 100vh;
-    max-width: 1280px;
-    margin: 0 auto;
-    background: #020617;
-    color: #cbd5e1;
-    font-family: 'Sora', sans-serif;
-    line-height: 1.5;
-    background-image: radial-gradient(#0f172a 1px,transparent 0),radial-gradient(#0f172a 1px,transparent 0);
-    background-position: 0 0,25px 25px;
-    background-attachment: fixed;
-    background-size: 50px 50px;
-    overflow-x: hidden;
-    padding: 4rem;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.get-started {
-    padding: 1rem 2rem;
-    border: 0.5px solid #1e293b;
-    background-color: #94a3b817;
-    border-radius: 2rem;
-    font-size: 0.875rem;
-    font-weight: 200;
-    width: 100%;
-    text-align: center;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    row-gap: 0.5rem;
-    column-gap: 1.5rem;
+    font-family: 'Sora', sans-serif;
 }
 
-.title {
-    position: relative;
-    text-align: center;
+img {
+    max-width: 100%;
 }
 
-.title::after {
-    content: "";
-    background: url('../images/blur-bg.svg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    position: absolute;
-    bottom: -130px;
-    right: -75px;
-    width: 500px;
-    height: 250px;
-    opacity: 0.5;
+/* Card Styles */
+
+.card {
+    background-color: var(--color-white);
+    max-width: 366px;
+    border-radius: var(--radius);
+    box-shadow: var(--box-shadow);
+    outline: 2px solid #00000000;
+    transition: outline .2s;
 }
-
-.logo {
-    display: none;
-}
-
-
-.link-card {
-    padding: 1rem;
-    border: 0.5px solid transparent;
-    transition: all ease-in-out 50ms;
+.card:hover {
+    outline: 2px solid var(--color-grey-light);
     cursor: pointer;
 }
 
-.link-card:hover {
-    border: 0.5px solid #1e293b;
-    background-color: #94a3b817;
-    border-radius: 8px;
+.card-image {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    padding: 1.1rem;
+}
+.card-image__image {
+    object-fit: cover;
+    border-radius: var(--radius);
+}
+.card-image__category {
+    margin: 8px 0 4px 0;
+    padding: 4px 17px;
+    background-color: var(--color-purple-light);
+    font-weight: 700;
+    font-size: var(--font-tag);
+    color: var(--color-purple);
+    border-radius: var(--radius);
 }
 
-.link-title {
-    font-size: 1.125rem;
+.card-content__title {
+    padding: 0 1.1rem .5rem 1.1rem;
+    color: var(--color-black);
+    font-weight: 700;
+    font-size: var(--font-title);
 }
-
-.link-description {
-    font-size: 0.875rem;
-    font-weight: 200;
-    margin-top: 0.5rem;
-    color: #94a3b8;
+.card-content__description {
+    padding: 1.1rem;
+    padding-top: 0;
+    line-height: 1.5;
+    color: var(--color-grey);
+    font-size: var(--font-body);
 }
-
-@media screen and (min-width: 720px) {
-    .logo {
-        display: initial;
-    }
-
-    .get-started {
-        width: auto;
-    }
-
-    main {
-        flex-direction: row;
-    }
-
-    footer {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 1rem;
-    }
-
-  }
+.card-content__author {
+    display: block;
+    padding: 1.1rem;
+    font-size: var(--font-small-text);
+    color: var(--color-grey);
+    border-top: 1px solid var(--color-grey-light);
+}
